# DutchRep

./: README.md  cabal.project  flake.nix
assets/V2/: dutchDrepNFT.plutus
assets/V3/: dutchDrep.plutus  dutchDrepCredential.plutus  dutchDrepLockScript.plutus  dutchDrepNFT.plutus
data/: drep.jsonld
nix/: project.nix  shell.nix
plutus-scripts/: plutus-scripts.cabal
plutus-scripts/exe/: Main.hs  Scripts.hs  ScriptsV2.hs  ScriptsV3.hs  Shared.hs
voting-rationales/: gov_action10k0unljvaej0kd89w7pn0zkgdx59c7xkl0x5q78dzvdtd73u0kmqq5xl5y5.jsonld  gov_action133jnaewfsq8x6v08ndd87l2yqryp63r30t2dkceacxx5cply5n7sqzlcyqf.jsonld  gov_action1fpqwxp2kxvnntr8hpkh9q9djm78ccdww7qlhg5safugh4stmcwzqql5lauu  gov_action1h4ygjv0hjfj3lmafcm76rpdzcm8vsvj9k5wejn3npyxwxm3fesnqqw9kxxz.jsonld  gov_action1js2s9v92zpxg2rge0y3jt9zy626he2m67x9kx9phw4r942kvsn6sqfym0d7.jsonld  gov_action1mmalzkcxpyn33t05hml2hxpwq0ffv6uu4mhe8sv7guz5nmm4afysqlmepzl  gov_action1nd3t833j7v5sz65k3tp9yyvztw60sjcjgcgjr37682s3m7frwrusqmd2k80.jsonld  gov_action1t87n2vjnavthuggyarerafxx8c7n9mu4c7r96qlfp5uggsjdc8dsqymg588.jsonld  gov_action1vdlrcftd48qn2zz8egepr6xyfcmxpfz8r69k769gc5mhg662adesq9yy8pl  gov_action1zhuz5djmmmjg8f9s8pe6grfc98xg3szglums8cgm6qwancp4eytqqmpu0pr.jsonld
