cabal-version: 3.0
name:          plutus-scripts
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A simple plutus script for the basis of the dutch DREP. "
build-type:    Simple

executable write-scripts
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:
    ScriptsV2
    ScriptsV3
    Shared

  hs-source-dirs:   exe
  build-depends:
    , aeson
    , base >=4.2 && <5
    , bytestring
    , cardano-api ^>=9.1.0.0
    , plutus-core ^>=1.31.0.0
    , plutus-ledger-api ^>=1.31.0.0
    , plutus-tx ^>=1.31.0.0
    , plutus-tx-plugin ^>=1.31.0.0
    , serialise
